[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Projectiles/Bullet.gd" type="Script" id=1]
[ext_resource path="res://tex/light.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 2 )

[node name="Bullet" type="Area2D"]
script = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 20, 0 )
width = 4.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 10, 0 )
shape = SubResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 10, 0 )
scale = Vector2( 1, 0.5 )
texture = ExtResource( 2 )
texture_scale = 48.0
shadow_enabled = true

[node name="Timer" type="Timer" parent="."]
process_mode = 0
one_shot = true
autostart = true
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
